# geese-bot

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
bot/: bot_core.py  sql_commands.txt
bot/scripts/: start_bot.py
tests/: conftest.py  run_once_to_get_session_string.py  sample_db.py  test_handlers.py
