[tool.poetry]
name = "Geeses's telegram bot"
version = "0.1.0"
description = "Telegram bot for small team."
authors = ["Geese 2021"]
packages = [
    {include = "bot"},
]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.22.0"
PyYAML = "^5.4.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
mypy = "^0.910"
coverage = "^5.5"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
geese-bot = "bot.scripts.start_bot:main"
